[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/etc/scene_background.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/etc/title.gd" type="Script" id=2]
[ext_resource path="res://assets/themes/title_labels.tres" type="Theme" id=3]
[ext_resource path="res://scenes/components/transition_button/transition_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/themes/global.tres" type="Theme" id=5]

[node name="Title" type="Control"]
self_modulate = Color( 0.34902, 0.160784, 0.619608, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_vertical_guides_": [ -87.0 ]
}

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="TitleMarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 97.0
custom_constants/margin_top = 10
custom_constants/margin_left = 10

[node name="TitleLbl" type="Label" parent="TitleMarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 512.0
margin_bottom = 139.0
theme = ExtResource( 3 )
text = "Boppy Bunny's
Rootin' Adventure"
autowrap = true
__meta__ = {
"_edit_lock_": true
}

[node name="ButtonsMarginContainer" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -204.0
margin_top = -216.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="ButtonsMarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 194.0
margin_bottom = 206.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameBtn" parent="ButtonsMarginContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 50.0
margin_right = 184.0
margin_bottom = 96.0
text = "New Game"
scene_to_load = "res://scenes/etc/how_to_play.tscn"
grab_focus_on_start = true

[node name="SettingsBtn" parent="ButtonsMarginContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 100.0
margin_right = 184.0
margin_bottom = 146.0
text = "Settings"
scene_to_load = "res://scenes/etc/settings.tscn"

[node name="CreditsBtn" parent="ButtonsMarginContainer/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 150.0
margin_right = 184.0
margin_bottom = 196.0
text = "Credits"
scene_to_load = "res://scenes/etc/credits.tscn"

[node name="ExitBtn" type="Button" parent="ButtonsMarginContainer/VBoxContainer"]
visible = false
margin_top = 150.0
margin_right = 184.0
margin_bottom = 196.0
text = "Exit"
flat = true
align = 0

[connection signal="pressed" from="ButtonsMarginContainer/VBoxContainer/ExitBtn" to="." method="_on_ExitBtn_pressed"]
